# mav_trajectory_generation

mav_trajectory_generation/: CMakeLists.txt  package.xml
mav_trajectory_generation/include/mav_trajectory_generation/: motion_defines.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_nonlinear.h  segment.h  trajectory.h  vertex.h
mav_trajectory_generation/include/mav_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h
mav_trajectory_generation/src/: io.cpp  polynomial.cpp  polynomial_timing_evaluation.cpp  segment.cpp  trajectory.cpp  trajectory_sampling.cpp  vertex.cpp
mav_trajectory_generation_example/: CMakeLists.txt  Readme.md  package.xml
mav_trajectory_generation_example/launch/: example.launch  example_6dof.launch  readme_example.launch  readme_example.launch.py
mav_trajectory_generation_example/src/: example_planner.cc  example_planner_6dof.cc  readme_example.cpp
mav_trajectory_generation_ros/: CMakeLists.txt  package.xml
mav_trajectory_generation_ros/include/mav_trajectory_generation_ros/: feasibility_base.h  ros_conversions.h  trajectory_sampler_node.h
mav_trajectory_generation_ros/src/: feasibility_base.cpp  input_constraints.cpp  ros_conversions.cpp  ros_visualization.cpp  time_evaluation_node.cpp  trajectory_sampler_node.cpp
mav_visualization/: CMakeLists.txt  package.xml
mav_visualization/include/mav_visualization/: helpers.h  marker_group.h
mav_visualization/src/: hexacopter_publisher.cpp  leica_marker.cpp  leica_publisher.cpp  marker_group.cpp
