<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mav_trajectory_generation</name>
  <version>1.0.0</version>
  <description>Polynomial trajectory generation for MAVs.</description>

  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>
  <author email="michael.burri@mavt.ethz.ch">Michael Burri</author>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <author email="mpopovic@ethz.ch">Marija Popovic</author>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_gtest</build_depend>

  <depend>rclcpp</depend>
  <depend>mav_msgs</depend>
  <depend>Eigen3</depend>
  <!-- <depend>nlopt</depend> -->

</package>
