<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mav_trajectory_generation_ros</name>
  <version>1.0.0</version>
  <description>ROS bindings for sampling, visualizing, and doing whatever with polynomial trajectories for MAVs.</description>

  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>
  <author email="michael.burri@mavt.ethz.ch">Michael Burri</author>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <author email="mpopovic@ethz.ch">Marija Popovic</author>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_visualization</depend>
  <depend>mav_planning_msgs</depend>
  <depend>Eigen3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
