<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mav_visualization</name>
  <version>1.0.0</version>
  <description>Visualization helpers for MAVs (with meshes).</description>

  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>
  <author email="michael.burri@mavt.ethz.ch">Michael Burri</author>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <author email="mpopovic@ethz.ch">Marija Popovic</author>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>ament cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen_conversions</depend>
  <depend>Eigen3</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
